#3 added empty group

--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -14,6 +14,7 @@
     ]]></description>
 
     <change-notes><![CDATA[
+    Added regex groups (defined in Settings).
     ]]>
     </change-notes>
 
