--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,11 @@
 kotlin.incremental.useClasspathSnapshot=false
-
 org.gradle.jvmargs=-Xmx9g
+pluginName=Editor Groups
+platformVersion=LATEST-EAP-SNAPSHOT
+platformType=IU
+pluginGroup=EditorGroups
+pluginVersion=2.0.0
+gradleVersion=7.4
+javaVersion=17
+pluginSinceBuild=231
+pluginUntilBuild=241.*
